<resources>
    <string name="app_name">Santander</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_1_text">Menu 1 selecionado</string>
    <string name="menu_2_text">Menu 2 selecionado</string>
    <string name="welcome_client">Olá, %s</string>
    <string name="account_agency">Ag %s</string>
    <string name="account_number">Cc %s</string>
    <string name="card_client">card_client</string>
    <string name="saldo_client">Saldo disponível</string>
    <string name="saldo_limite">Saldo + Limite:</string>
    <string name="ver_extrato">Ver extrato</string>
    <string name="pagar">Pagar</string>
    <string name="emprestimo">Emprestimo</string>
    <string name="recarga">Recarga</string>
    <string name="imagem_saldo">imagem saldo</string>
    <string name="imagem_expandir">imagem expandir</string>
    <string name="saldo_conta">R$ %s</string>
    <string name="valor_limite">R$ %s</string>
    <string name="imagem_pagar">imagem pagar</string>
    <string name="imagem_emprestimo">imagem emprestimo</string>
    <string name="imagem_recarga">imagem recarga</string>
    <string name="transferir">Transferir</string>
    <string name="cartao_final">Cartão final</string>
    <string name="cartao_number_example">%s</string>
    <string name="cartao">cartao</string>
</resources>